changing the background Color
replaceing the old

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color:rgb(143, 152, 153);"   >
+<body    >
 <img  src="image01.jpg" alt="" width="90%" height="90%"  >
 <img src="image02.jpg" alt="" width="90%" height="90%" leftmargin="20%" >
 
